--- a/src/main/webapp/includes/header.html
+++ b/src/main/webapp/includes/header.html
@@ -7,9 +7,7 @@
 				<li class="header-nav-brand" >
 					<div class="brand-holder">
 						<!-- <a href="index.html"> -->
-							<!-- <span class="text-lg text-bold text-primary">ITC ZEAS.</span>  -->
-							<!-- Make ZEAS white. Leave ITC as is. Shall work on a logo for ZEAS rather than ITC infotech logo. -->
-							<h2  class="icon" style="color: #FFFFFF; font-weight: bold;">ZEAS<!-- <img title="" src="images/logo.png" style="height:40px;"> --></h2>
+							<h2  class="icon" style="color: #FFFFFF; font-weight: bold;">iTech-2017<!-- <img title="" src="images/logo.png" style="height:40px;"> --></h2>
 						<!-- </a> -->
 					</div>
 				</li>
@@ -94,7 +92,6 @@
 					</a>
 					<ul class="dropdown-menu animation-dock">
 						<!-- li class="dropdown-header">Account settings.</li-->
-						<li  id="isAdmin"><a ng-click="userdetails();" class="pointerCursor">User Management</a></li>
                         <li class=account-settings><a ng-click="openModel('resetodal');" class="pointerCursor">Reset Password</a></li>
 						<!--<li><a href="#">Account</a></li>-->
 						<!--li class="divider"></li-->
