--- a/src/main/webapp/views/leftbar.html
+++ b/src/main/webapp/views/leftbar.html
@@ -35,29 +35,20 @@ list-style-type: none;
             <ul class="sidebar-nav nav-pills nav-stacked" id="menu" style="margin-top: 20px">
 						
 							<li class="menu-button-hide" ng-class="{activesidebarnav: pageURL() == '/Dashboard/' }">
-							 	<a  ng-click="golocation('Dashboard','icon-data');"><span class="fa-stack fa-lg pull-left"><i class="fa fa-line-chart icon-color" aria-hidden="true"></i></span> Dashboard</a>
+							 	<a  ng-click="golocation('Dashboard','icon-data');"><span class="fa-stack fa-lg pull-left"><i class="fa fa-line-chart icon-color" aria-hidden="true"></i></span> List1</a>
 							</li>
 							<li class="menu-button-hide" ng-class="{activesidebarnav: pageURL() == '/DataSchema/' }">
-							 	<a  ng-click="golocation('DataSchema','icon-data');"><span class="fa-stack fa-lg pull-left"><i class="fa fa-database icon-color" aria-hidden="true"></i></span> Datasets</a>
+							 	<a  ng-click="golocation('DataSchema','icon-data');"><span class="fa-stack fa-lg pull-left"><i class="fa fa-database icon-color" aria-hidden="true"></i></span> List2</a>
 							</li>
 							 <li class="menu-button" ng-class="{activesidebarnav: pageURL() == '/project/' }">
-							 	<a  ng-click="golocation('project','icon-data');" ><span class="fa-stack fa-lg pull-left"><i class="fa fa-suitcase icon-color" aria-hidden="true"></i></span> Projects</a>
+							 	<a  ng-click="golocation('project','icon-data');" ><span class="fa-stack fa-lg pull-left"><i class="fa fa-suitcase icon-color" aria-hidden="true"></i></span> List3</a>
 							</li>
-							<li class="menu-button-hide" ng-class="{activesidebarnav: pageURL() == '/workintrainprogress/' }">
-							 	<a  ng-click="golocation('workintrainprogress','icon-data');"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cogs icon-color" aria-hidden="true"></i></span> Trained Models</a>
-							</li>
-							<li class="menu-button-hide" ng-class="{activesidebarnav: pageURL() == '/Streaming/' }">
-							 	<a  ng-click="golocation('Streaming','icon-data');"><span class="fa-stack fa-lg pull-left"><i class="fa fa-spotify icon-color" aria-hidden="true"></i></span> Streaming</a>
-							</li>
-							<!-- <li ng-class="{active: pageURL() == '/PiplineResults/' }">
-							 	<a  ng-click="golocation('PiplineResults','icon-data');"><span class="fa-stack fa-lg pull-left"><img src="images/Project.png"></span> Machine Learning</a>
-							</li> -->
+							
+							
 							<li class="menu-button-hide" ng-class="{activesidebarnav: pageURL() == '/workinprogress/' }">
 							 	<a  ng-click="golocation('workinprogress','icon-data');"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cog icon-color" aria-hidden="true"></i></span> Settings</a>
 							</li>
-							<li class="menu-button-hide" ng-class="{activesidebarnav: pageURL() == '/dataLineage/' }">
-							 	<a  ng-click="golocation('dataLineage','icon-data');"><span class="fa-stack fa-lg pull-left"><i class="fa fa-pencil-square-o icon-color" aria-hidden="true"></i></span> Data Lineage</a>
-							</li>
+						
 		</ul>
 			
 		<ul class="sidebar-nav nav-pills nav-stacked menu-bar" >
