--- a/src/main/webapp/views/login.html
+++ b/src/main/webapp/views/login.html
@@ -2,10 +2,9 @@
 <section ng-controller="userController" id="loginPageContent" style="display:none">
 	<div class="container" ng-show="loginForm" id="loginform">
 	<div class="row loginpadding">
-	<div class="col-md-6 col-sm-6 zeroPadd" style="background-image:url('images/bg1.png');background-size:100% 100%; height:586px;text-align:center;">
-	 <img src="images/ZEAS.png" alt="" class="paddingLogo" />
-<p class="titleline">Big Data Enriched Transformed Analyzed</p>
-<p class="subtitleline">Z Enterprise Analytics System</p>
+	<div class="col-md-6 col-sm-6 zeroPadd" style="background-size:100% 100%; height:586px;text-align:center;">
+	 <img src="images/itech.png" alt="" class="paddingLogo" />
+<p class="titleline">Cross Platform Push Notification</p>
   <img src="images/ITC.png" alt="ITC Infotech Logo" />
   
 </figure>
