--- a/src/main/webapp/views/index.html
+++ b/src/main/webapp/views/index.html
@@ -5,9 +5,9 @@
 
 <meta charset="UTF-8" />
 
-<title>ZEAS</title>
+<title>iTech-2017</title>
 
-<base href="/ZDP-Web/">
+<base href="/iTech/">
 
 <!-- <link href='http://fonts.googleapis.com/css?family=Roboto:300italic,400italic,300,400,500,700,900' rel='stylesheet' type='text/css'/> -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
