--- a/src/main/webapp/views/index.html
+++ b/src/main/webapp/views/index.html
@@ -5,7 +5,7 @@
 
 <meta charset="UTF-8" />
 
-<title>iTech-2017</title>
+<title>iTech</title>
 
 <base href="/iTech/">
 
@@ -55,15 +55,6 @@
 <script src="js/directivejs.js"></script>
 <script src="js/commonfunction.js"></script>
 <script src="js/commonctrl.js"></script>
-<script src="js/dashboardctrl.js"></script>	
-<script src="js/profilejs.js"></script>	
-<script src="js/datapreviewjs.js"></script>
-<script src="js/archiveCtrljs.js"></script>	
-<script src="js/ingesstionsummaryjs.js"></script>	
-<script src="js/liniagejctrljs.js"></script>	
-<script src="js/projectctrl.js"></script>	
-<script src="js/streamctrl.js"></script>	
-<script src="js/validationjs.js"></script>	
 <script src="js/userctrl.js"></script>	
 <script src="js/sidebar_menu.js"></script>	
 </head>
@@ -95,9 +86,6 @@
 
 <script src="js/jquery.caret.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<!-- // <script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.0.4/js/bootstrap-transition.js"></script> -->
-<script src="js/AppOffcanvas.js"></script>
-<script src="js/AppNavSearch.js"></script>
 <script src="js/classie.js"></script>
 <script src="js/menu.js"></script>
 
@@ -105,13 +93,7 @@
 
 
 <script src="js/ng-google-chart.js"></script>
-<!-- <script src="js/debug.js" type="text/javascript"></script>
-<script src="js/flowchart/svg_class.js" type="text/javascript"></script>
-<script src="js/flowchart/mouse_capture_service.js"
-	type="text/javascript"></script> -->
-<!-- <script src="js/flowchart/dragging_service.js" type="text/javascript"></script>
-<script src="js/flowchart/flowchart_viewmodel.js" type="text/javascript"></script>
-<script src="js/flowchart/flowchart_directive.js" type="text/javascript"></script> -->
+
 
 <script src="js/ui-bootstrap-0.11.2.js"></script>
 <script src="js/ui-bootstrap-tpls-0.11.2.js"></script>
@@ -129,23 +111,7 @@
 <script src="js/bootstrap-multiselect.js" ></script>
 <link href="css/bootstrap-datetimepicker.min.css" rel="stylesheet">
 
-<!-- cytoscape and layout extension -->
-<script src="js/cytoscape.js" ></script>
-<script src="js/cytoscape.min.js" ></script>
-<script src="js/datalineagectrl.js" ></script>
-<script src="https://cdn.rawgit.com/cpettitt/dagre/v0.7.4/dist/dagre.min.js"></script> 
-<script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-dagre/1.5.0/cytoscape-dagre.js"></script> 
-<script src="js/cytoscape-dagre.js"></script>
-<script src="js/dagre.min.js"></script> 
 
-<!-- qtip extension -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.0/jquery.qtip.min.js"></script>
-<link href="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.0/jquery.qtip.min.css" rel="stylesheet" type="text/css" />
-<script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-qtip/2.7.0/cytoscape-qtip.js"></script>
-
-<!-- panzoom extension -->
-<script src="js/cytoscape-panzoom.js"></script>	
-<script src="css/cytoscape-panzoom.css"></script>	
 
 
 
