--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -42,7 +42,7 @@ a.nav-expander.fixed {
 }
 
 nav {
-  background: #2d2f33;
+  background: #012f8c;
   display: block;
   height: 100%;
   overflow: auto;
