--- a/src/main/webapp/views/devices.html
+++ b/src/main/webapp/views/devices.html
@@ -8,15 +8,15 @@
 		
 		<div class="col-md-12">
 		<div class="col-md-3">
-			<select ng-model="ddata.topicName" class="form-control" placeholder="Topic" ng-options="t.name for t in topics" id="">
+			<select ng-model="subscribe.topicName" class="form-control" placeholder="Topic" ng-options="t.name for t in topics" id="">
                                          <option value="">-Select Topic-</option>
                                      </select>
 									 
-									 
-		</div>
+					</div>				 
 		<div>
-			<button class="btn btn-primary">SUBSCRIBE</button>
+			<button class="btn btn-primary" ng-click="subscribeToTopic(subscribe)">SUBSCRIBE</button>
 		</div>
+		
 		</div>
 		<div class="clearfix">&nbsp;</div>
 		<div class="col-md-12">
@@ -25,20 +25,22 @@
                             <thead style="opacity:1 !important">
                                 <tr class="headertext">
                                     <th ><input type="checkbox" ng-model="dall" /></th>
-                                    <th>osVersion</th>
-									<th>deviceType</th>
-									<th>appVersion</th>
-									<th>deviceId</th>
+                                     <th>Os</th>
+                                    <th>OsVersion</th>
+									<th>User</th>
+									<th>AppVersion</th>
+									<th>IMEI</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="p in devices">
+                                <tr ng-repeat="device in devices">
 
-                                    <td><input type="checkbox" ng-model="ddata.checked" ng-checked="dall"/></td>
-									<td>{{p.osVersion}}</td>
-									<td>{{p.deviceType}}</td>
-									<td>{{p.appVersion}}</td>
-									<td>{{p.deviceId}}</td>
+                                    <td><input type="checkbox" ng-model="device.checked" ng-checked="dall" name="selectedDevice[]" ng-click="toggleSelection(device.arn)"/></td>
+                                    <td>{{device.os}}</td>
+									<td>{{device.osVersion}}</td>
+									<td>{{device.deviceType}}</td>
+									<td>{{device.appVersion}}</td>
+									<td>{{device.deviceId}}</td>
 
                                 </tr>
 
