--- a/src/main/webapp/views/leftbar.html
+++ b/src/main/webapp/views/leftbar.html
@@ -35,10 +35,10 @@ list-style-type: none;
             <ul class="sidebar-nav nav-pills nav-stacked" id="menu" style="margin-top: 20px">
 						
 							<li class="menu-button-hide" ng-class="{activesidebarnav: pageURL() == '/Topics/' }">
-							 	<a  ng-click="golocation('Topics','icon-data');"><span class="fa-stack fa-lg pull-left"><i class="fa fa-line-chart icon-color" aria-hidden="true"></i></span> Topics</a>
+							 	<a  ng-click="golocation('Topics','icon-data');"><span class="fa-stack fa-lg pull-left"><i class="fa icon-color" aria-hidden="true"><img src="images/topics.png"></img></i></span> Topics</a>
 							</li>
 							<li class="menu-button-hide" ng-class="{activesidebarnav: pageURL() == '/Devices/' }">
-							 	<a  ng-click="golocation('Devices','icon-data');"><span class="fa-stack fa-lg pull-left"><i class="fa fa-database icon-color" aria-hidden="true"></i></span> Devices</a>
+							 	<a  ng-click="golocation('Devices','icon-data');"><span class="fa-stack fa-lg pull-left"><i class="fa icon-color" aria-hidden="true"><img src="images/devices.png" ></img></i></span> Devices</a>
 							</li>
 							 <li class="menu-button" ng-class="{activesidebarnav: pageURL() == '/Menu3/' }">
 							 	<a  ng-click="golocation('Menu3','icon-data');" ><span class="fa-stack fa-lg pull-left"><i class="fa fa-suitcase icon-color" aria-hidden="true"></i></span> List3</a>
