--- a/src/main/webapp/views/login.html
+++ b/src/main/webapp/views/login.html
@@ -5,7 +5,7 @@
 	<div class="col-md-6 col-sm-6 zeroPadd" style="background-size:100% 100%; height:586px;text-align:center;">
 	 <img src="images/itech.png" alt="" class="paddingLogo" />
 <p class="titleline">Cross Platform Push Notification</p>
-  <img src="images/ITC.png" alt="ITC Infotech Logo" />
+  <img src="images/logo.png" alt="ITC Infotech Logo" />
   
 </figure>
 
