--- a/src/main/webapp/css/simple-sidebar.css
+++ b/src/main/webapp/css/simple-sidebar.css
@@ -27,7 +27,7 @@
     margin-left: -250px;
     overflow-y: auto;
 	 overflow-x: hidden;
-    background: #212134; 
+    background: #6e6eea;/*#212134;*/ 
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
